fix(default-recipe): Prioritize higher complexity conditions